--- a/jsMenuDev.html
+++ b/jsMenuDev.html
@@ -26,10 +26,10 @@
             </li>
         </ul>
     </div>
-    <textarea placeholder="Design menu and Push 'Export' button. Or paste json string here and push 'Import' button to view menu"></textarea>
+    <textarea placeholder="Design menu and Push [EXPORT] button. Or paste json string here and push [IMPORT] button to view menu."></textarea>
     <span>
-        <button id="generate">Generate</button>
-        <button id="import">Import</button>
+        <button id="export">EXPORT</button>
+        <button id="import">IMPORT</button>
     </span>
 </body>
 </html>
